changes according to tests

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -616,7 +616,7 @@
   year = {2014}
 }
 
-@article{HaufeEtAl2014,
+@article{HaufeEtAl2014b,
 	author = {Haufe, Stefan and D{\"a}hne, Sven and Nikulin, Vadim V},
 	doi = {https://doi.org/10.1016/j.neuroimage.2014.06.073},
 	journal = {NeuroImage},
